Avoid multisampled contexts in QOpenGLWidget

as it is not needed at all. Multisampled FBOs do not need multisampled
configs.

What's more, this fixes crashing Mesa with Intel and EGL, where creating
a pbuffer for a config with multisampling simply crashes. (and due to
other issues we disable surfaceless QOffscreenSurface for Intel so
the pbuffer cannot be avoided)

Task-number: QTBUG-47509
Change-Id: I3ae3fae8513a6dc64ca4ab11c61d4777c6c09cec
Reviewed-by: Andy Nichols <andy.nichols@theqtcompany.com>

cregit: 4a552d95f69b1319caacc5d36bcf428b06f32e1c https://github.com/qt/qtbase/commit/4a552d95f69b1319caacc5d36bcf428b06f32e1c